k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  labels:
    app: order-api
spec:
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
        - name: order-api
          image: cristianobarros/order-api
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              port: http
              path: /actuator/health
            failureThreshold: 30
          readinessProbe:
            httpGet:
              port: http
              path: /actuator/health
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
