k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-api
spec:
  hosts:
    - "*"
  gateways:
    - taste-food
  http:
    - match:
        - uri:
            prefix: /product
        - uri:
            prefix: /order
      route:
        - destination:
            host: order-api.default.svc.cluster.local
            port:
              number: 80
